--- a/documentation/htmlFiles/flowsolver.html
+++ b/documentation/htmlFiles/flowsolver.html
@@ -15,18 +15,6 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-  <script>
-    MathJax = {
-      tex: {
-        inlineMath: [
-          ['$', '$'],
-          ['$$', '$$'],
-          ['\\(', '\\)'],
-        ],
-      },
-    };
-  </script>
   
   <script>
     window.ZeroMdConfig = {
@@ -34,11 +22,21 @@
     }
   </script>
   
-  <script
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [
+          ['$', '$'],
+          ['\\(', '\\)']
+        ]
+      }
+    }
+  </script>
+
+<script
     type="module"
     src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
   ></script>
-
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
     <title>SimVascular</title>
@@ -264,9 +262,12 @@
     for(var i = 0; i < allZero_MD_File.length; i++)
     {
       allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
-      var el = document.createElement('script');
-      el.src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML";
-      document.head.appendChild(el);
+        let el = document.createElement('script');
+        el.type = "text/javascript";
+        el.async = true;
+        el.id = "MathJax-script";
+        el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
+        document.head.appendChild(el)
     });
     }
     
@@ -285,6 +286,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
+
+
 
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
   <script src="/js/jquery.mixitup.min.js"></script>
