--- a/documentation/htmlFiles/modeling.html
+++ b/documentation/htmlFiles/modeling.html
@@ -17,28 +17,26 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
   <script>
-    MathJax = {
-      tex: {
-        inlineMath: [
-          ['$', '$'],
-          ['$$', '$$'],
-          ['\\(', '\\)'],
-        ],
-      },
-    };
-  </script>
-  
-  <script>
     window.ZeroMdConfig = {
       cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
     }
   </script>
   
-  <script
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [
+          ['$', '$'],
+          ['\\(', '\\)']
+        ]
+      }
+    }
+  </script>
+
+<script
     type="module"
     src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
   ></script>
-
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
     <title>SimVascular</title>
@@ -260,9 +258,12 @@
     for(var i = 0; i < allZero_MD_File.length; i++)
     {
       allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
-      var el = document.createElement('script');
-      el.src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML";
-      document.head.appendChild(el);
+        let el = document.createElement('script');
+        el.type = "text/javascript";
+        el.async = true;
+        el.id = "MathJax-script";
+        el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
+        document.head.appendChild(el)
     });
     }
     
@@ -273,6 +274,7 @@
   <link rel="stylesheet" href="/css/grayscale.css">
   <link rel="stylesheet" href="/css/standards.css">
   <link rel="stylesheet" href="/css/documentation.css">
+  
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
