--- a/clinical/htmlFiles/pulmonary.html
+++ b/clinical/htmlFiles/pulmonary.html
@@ -9,38 +9,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Custom Fonts -->
-  <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="//vjs.zencdn.net/4.8/video-js.css" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-  <script>
-    MathJax = {
-      tex: {
-        inlineMath: [
-          ['$', '$'],
-          ['$$', '$$'],
-          ['\\(', '\\)'],
-        ],
-      },
-    };
-  </script>
   
   <script>
     window.ZeroMdConfig = {
-      cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
+      cssUrls: ["../../css/bootstrap.css","../../css/grayscale.css","../../css/standards.css","../../css/shop-item.css","../../css/documentation.css"]
     }
   </script>
   
-  <script
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [
+          ['$', '$'],
+          ['\\(', '\\)']
+        ]
+      }
+    }
+  </script>
+
+<script
     type="module"
     src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
-  ></script>
+    ></script>
 
     <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
+    <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
@@ -48,7 +47,7 @@
       <div class="topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
           <div class="headerNavBar">
@@ -62,34 +61,34 @@
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/quickguide.html">Getting Started</p>
+                      <p href="../htmlFiles/quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/modeling.html">Modeling Guide</p> 
+                      <p href="../htmlFiles/modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/meshing.html">Meshing Guide</p> 
+                      <p href="../htmlFiles/meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</p> 
+                      <p href="../htmlFiles/flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/svfsi.html">svFSI Guide</p> 
+                      <p href="../htmlFiles/svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</p> 
+                      <p href="../htmlFiles/simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                      <p href="../htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/genbc.html">General B.C. Guide</p> 
+                      <p href="../htmlFiles/genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/python_interface.html">Python Interface</p> 
+                      <p href="../htmlFiles/python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="/documentation/htmlFiles/references.html">References</p> 
+                      <p href="../htmlFiles/references.html">References</p> 
                     </div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
@@ -100,16 +99,19 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="clinicalCase3.html">Coronary Normal</a>                  
+                      <p href="../clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="">Healthy Pulmonary</a>                  
+                      <p href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
                     </div>
                   </div>
                 </details>
@@ -174,33 +176,29 @@
     for(var i = 0; i < allZero_MD_File.length; i++)
     {
       allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
-      var el = document.createElement('script');
-      el.src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML";
-      document.head.appendChild(el);
+        let el = document.createElement('script');
+        el.type = "text/javascript";
+        el.async = true;
+        el.id = "MathJax-script";
+        el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
+        document.head.appendChild(el)
     });
     }
     
   </script>
 
-  <!-- Style CSS -->
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/grayscale.css">
-  <link rel="stylesheet" href="/css/standards.css">
-  <link rel="stylesheet" href="/css/documentation.css">
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="/js/jquery-2.1.1.js"></script>
+  <script src="../../js/jquery-2.1.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
 
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
-  <script src="/js/jquery.mixitup.min.js"></script>
+  <script src="../../js/jquery.mixitup.min.js"></script>
 
-
-  <script src="/js/documentation.js"></script>
+  <script src="../../js/documentation.js"></script>
 
 </body>
   
