--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                 </p>
                 <h6 class="media-heading text-Left">Licensing terms for external open source packages</h6>
                 <p class="LegalStuff">
-                  ITK: <a target="_blank" href="http://www.itk.org/ITK/project/license.html">http://www.itk.org/ITK/project/license.html</a><br>
-                  VTK: <a target="_blank" href="http://www.vtk.org/VTK/project/license.html">http://www.vtk.org/VTK/project/license.html</a><br>
-                  Tetgen: <a target="_blank" href="http://wias-berlin.de/software/tetgen/1.5/agpl-3.0-standalone.html">http://wias-berlin.de/software/tetgen/1.5/agpl-3.0-standalone.html</a><br>
+                  ITK: <a target="_blank" href="https://www.itk.org/ITK/project/license.html">https://www.itk.org/ITK/project/license.html</a><br>
+                  VTK: <a target="_blank" href="https://www.vtk.org/VTK/project/license.html">https://www.vtk.org/VTK/project/license.html</a><br>
+                  Tetgen: <a target="_blank" href="https://wias-berlin.de/software/tetgen/1.5/agpl-3.0-standalone.html">https://wias-berlin.de/software/tetgen/1.5/agpl-3.0-standalone.html</a><br>
                 </p>
                 <h6 class="media-heading text-Left">Commercial components</h6>
                 <p class="LegalStuff">
@@ -247,18 +247,18 @@
           <div class="docSection">
             <div class="col-md-6 col-12">
               <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/quickguide.html">Getting Started</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/modeling.html">Modeling Guide</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/meshing.html">Meshing Guide</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/flowsolver.html">Simulation Guide</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/svfsi.html">svFSI Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/quickguide.html">Getting Started</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/modeling.html">Modeling Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/meshing.html">Meshing Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/flowsolver.html">Simulation Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/svfsi.html">svFSI Guide</a><br>
             </div>
             <div class="col-md-6 col-12">
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/simcardio.html">SimCardio Guide</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/genbc.html">General B.C. Guide</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/python_interface.html">Python Interface</a><br>
-              <a class="docLinks" target="_blank" href="../documentation/htmlFiles/references.html">References</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/simcardio.html">SimCardio Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/genbc.html">General B.C. Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/python_interface.html">Python Interface</a><br>
+              <a class="docLinks" target="_blank" href="documentation/htmlFiles/references.html">References</a><br>
               <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
             </div>
           </div>
@@ -270,10 +270,10 @@
               Clinical Case Studies</h2> 
           </div>
           <div class="docSection">
-            <a class="docLinks" target="_blank" href="../clinical/htmlFiles/coronary.html">Coronary Normal</a><br>
-            <a class="docLinks" target="_blank" href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a><br>
-            <a class="docLinks" target="_blank" href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a><br>
-            <a class="docLinks" target="_blank" href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>
+            <a class="docLinks" target="_blank" href="clinical/htmlFiles/coronary.html">Coronary Normal</a><br>
+            <a class="docLinks" target="_blank" href="clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a><br>
+            <a class="docLinks" target="_blank" href="clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a><br>
+            <a class="docLinks" target="_blank" href="clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>
           </div>
           <div class="docHeader ">
             <h2 class="media-heading"><i class="iconInHeader fa-solid fa-laptop-code">
